--- a/src/Windows/MainWindow.form
+++ b/src/Windows/MainWindow.form
@@ -262,6 +262,7 @@
               </Properties>
               <Events>
                 <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="DijkstraMenuItemMouseClicked"/>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="DijkstraMenuItemActionPerformed"/>
               </Events>
             </MenuItem>
           </SubComponents>
